creeated a main element to put section components inbetween them

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Odin Project Landing Page</title>
 </head>
 <body>
-  
+  <main class="">
+    <section class="">
+      <h1 class="">Odin Project Landing</h1>
+    </section>
+  </main>
 </body>
 </html>
