inputted the first section of the website with an h1, p, button and image element.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
   <main class="">
     <section class="">
-      <h1 class="">Odin Project Landing</h1>
+      <h1 class="">This Website Is Awsome!</h1>
+      <p>This website has some subtext that goes under the main title. It is a smaller font and it is a smaller font and it is lower in contrast.</p>
+      <button class="">Sign Up</button>
+      <div class="">
+        <img src="/#" alt="This is a placeholder for the image" class="hero-media" />
+      </div>
     </section>
   </main>
 </body>
