--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
         <img src="/#" alt="This is a placeholder for the image" class="hero-media" />
       </div>
     </section>
+    <section>
+      <h2 class="">Some Random Infromation</h2>
+      <div class="">
+        <div class="">
+          <span>&nbsp;</span>
+          <p>this is some subtext under an illustration or image.</p>
+        </div>
+        <div class="">
+          <span>&nbsp;</span>
+          <p>this is some subtext under an illustration or image.</p>
+        </div>
+        <div class="">
+          <span>&nbsp;</span>
+          <p>this is some subtext under an illustration or image.</p>
+        </div>
+        <div class="">
+          <span>&nbsp;</span>
+          <p>this is some subtext under an illustration or image.</p>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
