--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         </div>
       </div>
     </section>
+    <section>
+      <h3><em>This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe people will actually read it. Who Knows? All I know that it looks nice so it will stay <here class=""></here></em></h3>
+      <p><strong>thor god of thunder</strong></p>
+    </section>
   </main>
 </body>
 </html>
