created a footer component to end the website.
this footer will include a span with a class to show current year.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <p>Sign up for our product by clicking that button right over there!</p>
       <button>Sign Up</button>
     </section>
+    <footer>
+      <h5>Copyright &copy; The Odin Project <span class="footer-year">Year</span></h5>
+    </footer>
   </main>
 </body>
 </html>
