--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main class="">
-    <section class="">
+    <section class="" aria-label="hero">
       <h1 class="">This Website Is Awsome!</h1>
       <p>This website has some subtext that goes under the main title. It is a smaller font and it is a smaller font and it is lower in contrast.</p>
       <button class="">Sign Up</button>
@@ -17,7 +17,7 @@
         <img src="/#" alt="This is a placeholder for the image" class="hero-media" />
       </div>
     </section>
-    <section>
+    <section aria-label="features">
       <h2 class="">Some Random Infromation</h2>
       <div class="">
         <div class="">
@@ -38,11 +38,11 @@
         </div>
       </div>
     </section>
-    <section>
+    <section aria-label="testimonial">
       <h3><em>This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe people will actually read it. Who Knows? All I know that it looks nice so it will stay <here class=""></here></em></h3>
       <p><strong>thor god of thunder</strong></p>
     </section>
-    <section>
+    <section aria-label="call-to-action">
       <h4>Call To Action! It's Time.</h4>
       <p>Sign up for our product by clicking that button right over there!</p>
       <button>Sign Up</button>
