--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <img src="/#" alt="This is a placeholder for the image" class="hero-media" />
       </div>
     </section>
-    <section aria-label="features">
+    <section class="" aria-label="features">
       <h2 class="">Some Random Infromation</h2>
       <div class="">
         <div class="">
-          <span>&nbsp;</span>
+          <span class="">&nbsp;</span>
           <p>this is some subtext under an illustration or image.</p>
         </div>
         <div class="">
@@ -38,16 +38,16 @@
         </div>
       </div>
     </section>
-    <section aria-label="testimonial">
+    <section class="" aria-label="testimonial">
       <h3><em>This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe people will actually read it. Who Knows? All I know that it looks nice so it will stay <here class=""></here></em></h3>
       <p><strong>thor god of thunder</strong></p>
     </section>
-    <section aria-label="call-to-action">
+    <section class="" aria-label="call-to-action">
       <h4>Call To Action! It's Time.</h4>
       <p>Sign up for our product by clicking that button right over there!</p>
       <button>Sign Up</button>
     </section>
-    <footer>
+    <footer class="">
       <h5>Copyright &copy; The Odin Project <span class="footer-year">Year</span></h5>
     </footer>
   </main>
