included class names inside hero section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <main class="">
-    <section class="" aria-label="hero">
-      <h1 class="">This Website Is Awsome!</h1>
+    <section class="hero" aria-label="hero">
+      <h1 class="hero-headline">This Website Is Awsome!</h1>
       <p>This website has some subtext that goes under the main title. It is a smaller font and it is a smaller font and it is lower in contrast.</p>
-      <button class="">Sign Up</button>
-      <div class="">
+      <button class="btn-primary">Sign Up</button>
+      <div class="hero-media">
         <img src="/#" alt="This is a placeholder for the image" class="hero-media" />
       </div>
     </section>
