--- a/index.html
+++ b/index.html
@@ -1,55 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css" />
-  <title>Odin Project Landing Page</title>
-</head>
-<body>
-  <main class="">
-    <section class="hero" aria-label="hero">
-      <h1 class="hero-headline">This Website Is Awsome!</h1>
-      <p>This website has some subtext that goes under the main title. It is a smaller font and it is a smaller font and it is lower in contrast.</p>
-      <button class="btn-primary">Sign Up</button>
-      <div class="hero-media">
-        <img src="/#" alt="This is a placeholder for the image" class="hero-media" />
-      </div>
-    </section>
-    <section class="" aria-label="features">
-      <h2 class="">Some Random Infromation</h2>
-      <div class="">
-        <div class="">
-          <span class="">&nbsp;</span>
-          <p>this is some subtext under an illustration or image.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Odin Project Landing Page</title>
+  </head>
+  <body>
+    <main class="">
+      <section class="hero" aria-label="hero">
+        <h1 class="hero-headline">This Website Is Awsome!</h1>
+        <p>
+          This website has some subtext that goes under the main title. It is a
+          smaller font and it is a smaller font and it is lower in contrast.
+        </p>
+        <button class="btn-primary">Sign Up</button>
+        <div class="hero-media">
+          <img
+            src="/#"
+            alt="This is a placeholder for the image"
+            class="hero-media"
+          />
         </div>
+      </section>
+      <section class="" aria-label="features">
+        <h2 class="">Some Random Infromation</h2>
         <div class="">
-          <span>&nbsp;</span>
-          <p>this is some subtext under an illustration or image.</p>
+          <div class="">
+            <span class="">&nbsp;</span>
+            <p>this is some subtext under an illustration or image.</p>
+          </div>
+          <div class="">
+            <span>&nbsp;</span>
+            <p>this is some subtext under an illustration or image.</p>
+          </div>
+          <div class="">
+            <span>&nbsp;</span>
+            <p>this is some subtext under an illustration or image.</p>
+          </div>
+          <div class="">
+            <span>&nbsp;</span>
+            <p>this is some subtext under an illustration or image.</p>
+          </div>
         </div>
-        <div class="">
-          <span>&nbsp;</span>
-          <p>this is some subtext under an illustration or image.</p>
-        </div>
-        <div class="">
-          <span>&nbsp;</span>
-          <p>this is some subtext under an illustration or image.</p>
-        </div>
-      </div>
-    </section>
-    <section class="" aria-label="testimonial">
-      <h3><em>This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe people will actually read it. Who Knows? All I know that it looks nice so it will stay <here class=""></here></em></h3>
-      <p><strong>thor god of thunder</strong></p>
-    </section>
-    <section class="" aria-label="call-to-action">
-      <h4>Call To Action! It's Time.</h4>
-      <p>Sign up for our product by clicking that button right over there!</p>
-      <button>Sign Up</button>
-    </section>
-    <footer class="">
-      <h5>Copyright &copy; The Odin Project <span class="footer-year">Year</span></h5>
-    </footer>
-  </main>
-</body>
+      </section>
+      <section class="" aria-label="testimonial">
+        <h3>
+          <em
+            >This is an inspiring quote, or a testimonial from a customer. Maybe
+            it is just filling up space, or maybe people will actually read it.
+            Who Knows? All I know that it looks nice so it will stay
+            <here class=""></here
+          ></em>
+        </h3>
+        <p><strong>thor god of thunder</strong></p>
+      </section>
+      <section class="" aria-label="call-to-action">
+        <h4>Call To Action! It's Time.</h4>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign Up</button>
+      </section>
+      <footer class="">
+        <h5>
+          Copyright &copy; The Odin Project
+          <span class="footer-year">Year</span>
+        </h5>
+      </footer>
+    </main>
+  </body>
 </html>
