wrapper class to center the html content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Odin Project Landing Page</title>
   </head>
   <body>
-    <main class="">
+    <main class="wrapper">
       <section class="hero" aria-label="hero">
         <h1 class="hero-headline">This Website Is Awsome!</h1>
         <p>
