moved text into a container called hero content

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <main class="wrapper">
       <section class="hero" aria-label="hero">
-        <h1 class="hero-headline">This Website Is Awsome!</h1>
-        <p>
-          This website has some subtext that goes under the main title. It is a
-          smaller font and it is a smaller font and it is lower in contrast.
-        </p>
-        <button class="btn-primary">Sign Up</button>
+        <div class="hero-content">
+          <h1 class="hero-headline">This Website Is Awsome!</h1>
+          <p>
+            This website has some subtext that goes under the main title. It is
+            a smaller font and it is a smaller font and it is lower in contrast.
+          </p>
+          <button class="btn-primary">Sign Up</button>
+        </div>
         <div class="hero-media">
           <img
             src="/#"
