--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="hero-media">
           <img
-            src="/#"
+            src="https://images.unsplash.com/photo-1555881400-74d7acaacd8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
             alt="This is a placeholder for the image"
             class="hero-media"
           />
