--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
           />
         </div>
       </section>
-      <section class="" aria-label="features">
+      <section class="features" aria-label="features">
         <h2 class="">Some Random Infromation</h2>
-        <div class="">
-          <div class="">
+        <div class="features-container">
+          <div class="features-item">
             <span class="">&nbsp;</span>
             <p>this is some subtext under an illustration or image.</p>
           </div>
-          <div class="">
+          <div class="features-item">
             <span>&nbsp;</span>
             <p>this is some subtext under an illustration or image.</p>
           </div>
-          <div class="">
+          <div class="features-item">
             <span>&nbsp;</span>
             <p>this is some subtext under an illustration or image.</p>
           </div>
-          <div class="">
+          <div class="features-item">
             <span>&nbsp;</span>
             <p>this is some subtext under an illustration or image.</p>
           </div>
