--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
         </div>
       </section>
-      <section class="" aria-label="testimonial">
+      <section class="testimonial testimonial-inverse testimonial-full-bleed" aria-label="testimonial">
         <h3>
           <em
             >This is an inspiring quote, or a testimonial from a customer. Maybe
