--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
         </h3>
         <p><strong>thor god of thunder</strong></p>
       </section>
-      <section class="" aria-label="call-to-action">
-        <h4>Call To Action! It's Time.</h4>
+      <section class="call-to-action cta-inverse cta-full-bleed" aria-label="call-to-action">
+        <div class="">
+          <h4>Call To Action! It's Time.</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
         <button>Sign Up</button>
       </section>
       <footer class="">
