created footer styles with inverse and full bleed styles

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <button>Sign Up</button>
       </section>
-      <footer class="">
+      <footer class="footer-inverse footer-full-bleed">
         <h5>
           Copyright &copy; The Odin Project
           <span class="footer-year">Year</span>
