created a responsive header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
     <main class="wrapper">
+      <nav class="appbar-inverse appbar-full-bleed">
+        <div class="appbar-brand">
+          <a href="/#">Header Logo</a>
+        </div>
+        <ul class="appbar-links">
+          <li><a href="/#">Header Link 01</a></li>
+          <li><a href="/#">Header Link 02</a></li>
+          <li><a href="/#">Header Link 03</a></li>
+        </ul>
+      </nav>
       <section class="hero" aria-label="hero">
         <div class="hero-content">
           <h1 class="hero-headline">This Website Is Awsome!</h1>
@@ -47,7 +57,10 @@
           </div>
         </div>
       </section>
-      <section class="testimonial testimonial-inverse testimonial-full-bleed" aria-label="testimonial">
+      <section
+        class="testimonial testimonial-inverse testimonial-full-bleed"
+        aria-label="testimonial"
+      >
         <h3>
           <em
             >This is an inspiring quote, or a testimonial from a customer. Maybe
@@ -58,10 +71,15 @@
         </h3>
         <p><strong>thor god of thunder</strong></p>
       </section>
-      <section class="call-to-action cta-inverse cta-full-bleed" aria-label="call-to-action">
+      <section
+        class="call-to-action cta-inverse cta-full-bleed"
+        aria-label="call-to-action"
+      >
         <div class="">
           <h4>Call To Action! It's Time.</h4>
-        <p>Sign up for our product by clicking that button right over there!</p>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
         </div>
         <button>Sign Up</button>
       </section>
